--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -5,7 +5,7 @@
 	"block.examplemod.heat_collector": "Heat Collector",
 	"block.examplemod.electric_furnace": "Electric Furnace",
 	"block.examplemod.mod_furnace": "Mod Furnace",
-	"item.examplemod.example_item": "Example Item",
+	"item.examplemod.example_crystal": "Example Crystal",
 	"itemGroup.examplemod": "Example Mod",
 	"gui.examplemod.refresh_mini_model": "Refresh Mini Model",
 	"gui.examplemod.energy": "Energy %s",
