--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -5,8 +5,9 @@
 	"block.examplemod.heat_collector": "Heat Collector",
 	"block.examplemod.electric_furnace": "Electric Furnace",
 	"block.examplemod.mod_furnace": "Mod Furnace",
-	"item.examplemod.example_crystal": "Example Crystal",
 	"itemGroup.examplemod": "Example Mod",
+	"item.examplemod.example_crystal": "Example Crystal",
+	"item.examplemod.wild_boar_spawn_egg": "Wild Boar Spawn Egg",
 	"gui.examplemod.refresh_mini_model": "Refresh Mini Model",
 	"gui.examplemod.energy": "Energy %s",
 	"gui.examplemod.smeltTimeProgress": "Smelt time %s/%s",
