Added Ruby item

--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -6,6 +6,7 @@
 	"block.examplemod.electric_furnace": "Electric Furnace",
 	"block.examplemod.mod_furnace": "Mod Furnace",
 	"itemGroup.examplemod": "Example Mod",
+	"item.examplemod.ruby": "Ruby",
 	"item.examplemod.example_crystal": "Example Crystal",
 	"item.examplemod.wild_boar_spawn_egg": "Wild Boar Spawn Egg",
 	"gui.examplemod.refresh_mini_model": "Refresh Mini Model",
