Added ruby axe, ruby pickaxe, ruby sword, ruby shovel, ruby hoe

--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -7,6 +7,13 @@
 	"block.examplemod.mod_furnace": "Mod Furnace",
 	"itemGroup.examplemod": "Example Mod",
 	"item.examplemod.example_crystal": "Example Crystal",
+	"item.examplemod.ruby": "Ruby",
+	"item.examplemod.ruby_sword": "Ruby Sword",
+	"item.examplemod.ruby_pickaxe": "Ruby Pickaxe",
+	"item.examplemod.ruby_axe": "Ruby Axe",
+	"item.examplemod.ruby_shovel": "Ruby Shovel",
+	"item.examplemod.ruby_hoe": "Ruby Hoe",
+	"block.examplemod.ruby_block": "Block of ruby",
 	"item.examplemod.wild_boar_spawn_egg": "Wild Boar Spawn Egg",
 	"gui.examplemod.refresh_mini_model": "Refresh Mini Model",
 	"gui.examplemod.energy": "Energy %s",
